[gd_scene load_steps=6 format=3 uid="uid://dxrqbgc1igt68"]

[ext_resource type="PackedScene" uid="uid://b26b6vpjfeouj" path="res://Scenes/Items/Revolver.tscn" id="4_5c1w6"]
[ext_resource type="PackedScene" uid="uid://bs04jfikm7vb6" path="res://Scenes/Items/GunSpawner.tscn" id="4_783md"]
[ext_resource type="PackedScene" uid="uid://bcgegtsnnb4gq" path="res://Scenes/Players/PlayerScene.tscn" id="5_5c1w6"]
[ext_resource type="PackedScene" uid="uid://cltdh4fw2k5dg" path="res://Scenes/Players/PlayerScene_P2.tscn" id="7_kjvde"]
[ext_resource type="Script" uid="uid://d25lsmv776f5s" path="res://Scripts/GameManager.gd" id="8_1tvcf"]
[ext_resource type="PackedScene" uid="uid://co7hqls6b3hcl" path="res://Scenes/Levels/desert_level.tscn" id="8_n02r8"]
[ext_resource type="Script" uid="uid://notpp627ktgt" path="res://Scripts/LevelManager.gd" id="9_n02r8"]
[ext_resource type="PackedScene" uid="uid://bpjqufsdcri7i" path="res://Scenes/Levels/Cave Level.tscn" id="11_pe4ny"]
[ext_resource type="PackedScene" uid="uid://l5jem2xxnfre" path="res://Scenes/UI/ScoreUI.tscn" id="12_score"]

[node name="Main" type="Node2D"]

[node name="GameManager" parent="." instance=ExtResource("1_125yk")]

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("9_n02r8")
levels = Array[PackedScene]([ExtResource("8_n02r8"), ExtResource("11_pe4ny")])

[node name="ScoreUI" parent="." instance=ExtResource("12_score")]
